fix: fixed the color of badges in dark mode

--- a/packages/appstore/src/components/modals/verification-docs-list-modal/verification-docs-list-modal.scss
+++ b/packages/appstore/src/components/modals/verification-docs-list-modal/verification-docs-list-modal.scss
@@ -8,6 +8,7 @@
         &-list {
             width: 100%;
             &-item {
+                cursor: pointer;
                 display: flex;
                 min-height: 5.6rem;
                 align-items: center;
