--- a/packages/components/src/components/status-badge/status-badge.scss
+++ b/packages/components/src/components/status-badge/status-badge.scss
@@ -34,7 +34,6 @@
         &--needs_verification {
             background-color: var(--status-info-transparent);
             color: var(--status-info);
-            text-decoration: underline;
             font-weight: bold;
         }
         &--failed,
@@ -44,7 +43,6 @@
             border-color: var(--status-danger);
             color: $color-status-danger;
             font-weight: bold;
-            text-decoration: underline;
             background-color: var(--status-danger-transparent);
         }
 
