--- a/packages/shared/src/styles/themes.scss
+++ b/packages/shared/src/styles/themes.scss
@@ -158,7 +158,7 @@
         --status-default: #{$color-grey-3};
         --status-adjustment: #{$color-grey-1};
         --status-danger: #{$color-red-1};
-        --status-danger-transparent: #{$alpha-color-red-1};
+        --status-danger-transparent: #{$alpha-color-red-2};
         --status-success: #{$color-green-1};
         --status-success-transparent: #{$alpha-color-green-3};
         --status-warning: #{$color-yellow};
@@ -323,6 +323,10 @@
         --status-success: #{$color-green-3};
         --status-transfer: #{$color-orange};
         --status-info: #{$color-blue};
+        --status-warning-dark: #{$color-yellow-1};
+        --status-danger-transparent: #{$alpha-color-red-1};
+        --status-success-transparent: #{$alpha-color-green-3};
+        --status-info-transparent: #{$alpha-color-blue-1};
         --status-colored-background: #{$color-white};
         --status-alert-background: #{$color-yellow-3};
         // Transparentize
